--- a/ESME_eleve/app/src/main/res/layout/activity_calendar.xml
+++ b/ESME_eleve/app/src/main/res/layout/activity_calendar.xml
@@ -74,7 +74,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="65dp"
         android:background="#bee6f2"
@@ -106,4 +106,19 @@
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewEvenementsAVenir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/blue_esme"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:text="Cours importants à venir"
+        android:textColor="#000000"
+        android:textSize="28sp"
+        app:layout_constraintBottom_toTopOf="@+id/RVTousCours"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
