--- a/ESME_eleve/app/src/main/res/layout/custom_adapter_cours.xml
+++ b/ESME_eleve/app/src/main/res/layout/custom_adapter_cours.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:maxHeight="30dp"
+    android:layout_height="wrap_content"
     tools:context=".CustomAdapterNotes">
 
     <TextView
@@ -13,8 +12,10 @@
         android:layout_height="20dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:text="Matière"
         android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -60,6 +61,16 @@
         android:text="Salle"
         android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/textViewHeures"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewEstCustom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:text="Custom?"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
