--- a/ESME_eleve/app/src/main/res/layout/custom_adapter_cours.xml
+++ b/ESME_eleve/app/src/main/res/layout/custom_adapter_cours.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/textViewMatiereCours"
         android:layout_width="80dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
@@ -22,7 +22,7 @@
     <TextView
         android:id="@+id/textViewIntituleCours"
         android:layout_width="50dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:text="Intitulé"
